# ffbox

./: README.md  pyproject.toml
src/: ffmpeg.py  ffplay.py  filters.py  stream.py  validators.py
