[tool.poetry]
name = "cloudyff"
version = "0.1.0"
description = "python ffmpeg wrapper"
authors = ["uselessvevo <jcommander13@yandex.ru>"]
readme = "README.md"
packages = [{include = "ffbox"}]

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "^5.15.7"
dotty-dict = "^1.3.1"
watchdog = "^2.1.9"
loguru = "^0.6.0"
ipdb = "^0.13.9"
aiomultiprocess = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
